add previous messages displaying and autoscroll to new messages

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
 .incoming-message__display {
     height: 200px;
     border: 1px solid grey;
+    overflow: scroll;
 }
 
 .outgoing-message {
