--- a/src/index.css
+++ b/src/index.css
@@ -39,13 +39,20 @@ body {
     margin-left: auto;
     margin-right: auto;
     font-size: 18px;
-    height: 250px;
+    height: 450px;
+}
+
+.incoming-message-container {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .incoming-message__display {
-    height: 200px;
+    height: 400px;
     border: 1px solid grey;
+    font-size: 14px;
     overflow: scroll;
+    padding: 5px;
 }
 
 .outgoing-message {
@@ -72,4 +79,20 @@ body {
 
 .outgoing-message__error--hidden {
     display: none;
+}
+
+.incoming-message__item {
+    width: 400px;
+    float: left;
+    background-color: rgb(226, 226, 226);
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.outgoing-message__item {
+    width: 400px;
+    float: right;
+    background-color: rgb(226, 226, 226);
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
